--- a/.cursorignore
+++ b/.cursorignore
@@ -2,3 +2,5 @@
 /ai_rules_backups/*
 # SpecStory derived-cursor-rules.mdc backup files
 .specstory/ai_rules_backups/*
+# SpecStory derived-cursor-rules.mdc backup files
+.specstory/ai_rules_backups/*
